Fix text background color in SEMOS dark mode

--- a/www/css/manual-dark.css
+++ b/www/css/manual-dark.css
@@ -17,10 +17,6 @@ code.terminal{
 	border-color: rgba(255, 255, 255, .5);
 }
 
-main.manual *:target{
-	color: var(--light-body-text);
-}
-
 main.manual *:target aside.number{
 	color: var(--dark-body-text);
 }
